<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_tempat_tersedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/tv_ketersediaan"
        android:textSize="20sp"  />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_total_ketersediaan_lantai1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_hasil_lantai1"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_total_ketersediaan2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_total_ketersediaan_perlantai"
                android:textSize="50sp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_marginTop="20dp"
        android:layout_width="330dp"
        android:layout_height="210dp"
        android:layout_gravity="center" >
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" >

            <ImageView
                android:id="@+id/ultra1_lt1"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <ImageView
                android:id="@+id/ultra2_lt1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <ImageView
                android:id="@+id/ultra3_lt1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" >

            <ImageView
                android:id="@+id/ultra4_lt1"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <ImageView
                android:id="@+id/ultra5_lt1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <ImageView
                android:id="@+id/ultra6_lt1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/show_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/show_time"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_kembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_kembali"
        android:textSize="20sp" />
</LinearLayout>